[gd_scene load_steps=13 format=3 uid="uid://b81141qafvyoy"]

[ext_resource type="PackedScene" uid="uid://c35xol47gvw7b" path="res://examples/src/hit/2d/hitbox/character_2d.tscn" id="1_lf2y2"]
[ext_resource type="Script" uid="uid://csrc8rpesq3h" path="res://examples/src/hit/2d/hitbox/hitbox_hurt_test.gd" id="2_6ff05"]
[ext_resource type="Script" uid="uid://vrj60wkxs1rm" path="res://examples/src/hit/2d/hitbox/fray_hitbox_2d.gd" id="2_7ke1w"]
[ext_resource type="Script" uid="uid://b7knkovok4fgq" path="res://addons/fray/src/hit/hitbox_attribute.gd" id="4_yw0h4"]
[ext_resource type="Script" uid="uid://dt4tauhurow3r" path="res://examples/src/hit/2d/hitbox/hud.gd" id="5_1xhf1"]
[ext_resource type="Script" uid="uid://jtnxpcki81mm" path="res://examples/src/hit/2d/hitbox/hitbox_attributes_test.gd" id="5_avvcn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ke1w"]
size = Vector2(1159, 20)

[sub_resource type="Resource" id="Resource_2rnb2"]
script = ExtResource("4_yw0h4")
metadata/_custom_type_script = "uid://b7knkovok4fgq"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78867"]
size = Vector2(45, 44)

[sub_resource type="Resource" id="Resource_7irau"]
script = ExtResource("5_avvcn")
color = Color(0, 0, 0, 1)
damage = 0
metadata/_custom_type_script = "uid://jtnxpcki81mm"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xhf1"]
size = Vector2(20, 254)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw0h4"]
size = Vector2(68, 60)

[node name="TestingHit2d" type="CanvasLayer"]

[node name="RigidBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(580.5, 624)
shape = SubResource("RectangleShape2D_7ke1w")

[node name="ColorRect" type="ColorRect" parent="RigidBody2D"]
offset_top = 617.0
offset_right = 1154.0
offset_bottom = 657.0

[node name="Character2d" parent="." instance=ExtResource("1_lf2y2")]
visible = false
position = Vector2(74, 69)

[node name="HitboxDetectThing" type="StaticBody2D" parent="."]
position = Vector2(564, 568)
script = ExtResource("2_6ff05")
node_path = NodePath("../Character2d")

[node name="ColorRect" type="ColorRect" parent="HitboxDetectThing"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0, 1, 1)

[node name="FrayHitbox2D" type="Area2D" parent="HitboxDetectThing"]
position = Vector2(6, 0)
script = ExtResource("2_7ke1w")
attribute = SubResource("Resource_2rnb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxDetectThing/FrayHitbox2D"]
position = Vector2(22, 21)
shape = SubResource("RectangleShape2D_78867")
debug_color = Color(0, 0, 0, 0.5)

[node name="FrayHitbox2D2" type="Area2D" parent="HitboxDetectThing"]
position = Vector2(6, 0)
script = ExtResource("2_7ke1w")
attribute = SubResource("Resource_7irau")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxDetectThing/FrayHitbox2D2"]
position = Vector2(22, -96)
shape = SubResource("RectangleShape2D_1xhf1")
debug_color = Color(0, 0, 0, 0.5)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(388, 527)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yw0h4")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_1xhf1")

[node name="Label" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Health: 100"

[connection signal="health_changed" from="Character2d" to="HUD" method="_on_character_2d_health_changed"]
[connection signal="hitbox_entered" from="HitboxDetectThing/FrayHitbox2D" to="HitboxDetectThing" method="_on_fray_hitbox_2d_hitbox_entered"]
[connection signal="hitbox_entered" from="HitboxDetectThing/FrayHitbox2D2" to="HitboxDetectThing" method="_on_fray_hitbox_2d_hitbox_entered"]
[connection signal="area_entered" from="Area2D" to="Character2d" method="_on_area_2d_area_entered"]
